// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correctly with all props 1`] = `
<BVLinearGradient
  colors={
    Array [
      4293914607,
      4293914607,
    ]
  }
  locations={
    Array [
      0,
      1,
    ]
  }
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Array [
            undefined,
            null,
          ]
        }
      >
        <View
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#2E88FF",
                    "fontSize": 36,
                  },
                  undefined,
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
              type="material-community"
            >
              
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              undefined,
              undefined,
              Object {
                "alignItems": "flex-start",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "fontFamily": "OpenSans-Regular",
                },
                Array [
                  undefined,
                  null,
                ],
              ]
            }
          >
            Categories
          </Text>
        </View>
        <View
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        />
      </View>
      <RCTScrollView
        contentContainerStyle={
          Array [
            undefined,
            Object {
              "paddingBottom": 15,
            },
          ]
        }
        data={
          Array [
            Object {
              "__typename": "Post",
              "_id": "ynCDtwqBhhqK2vveG",
              "baseScore": 2,
              "categories": Array [
                Object {
                  "name": "news",
                },
              ],
              "clickCount": 1,
              "color": "blue",
              "commentCount": 3,
              "commenters": Array [
                Object {
                  "__typename": "User",
                  "_id": "Z2mNWQuJXFTJCnMyi",
                  "avatarUrl": "https://secure.gravatar.com/avatar/0db53901eca1472a8997a38a24b38d06?size=200&default=mm",
                  "displayName": "tester",
                  "emailHash": "0db53901eca1472a8997a38a24b38d06",
                  "slug": "tester",
                  "username": "tester",
                },
              ],
              "createdAt": "2017-11-24T19:21:42.183Z",
              "currentUserVotes": Array [
                Object {
                  "__typename": "Vote",
                  "_id": "9LDpdbmQpig9SN6X3",
                  "power": 1,
                  "voteType": "upvote",
                },
              ],
              "excerpt": "The gun and bomb assault in Sinai is the deadliest militant attack in Egypt
",
              "postedAt": "2017-11-24T19:21:42.183Z",
              "score": 0.499763,
              "slug": "egypt-attack-more-than-230-killed-in-sinai-mosque-bbc-news",
              "status": 2,
              "sticky": false,
              "thumbnailUrl": "https://ichef-1.bbci.co.uk/news/1024/cpsprodpb/B1ED/production/_98894554_mediaitem98894553.jpg",
              "title": "Egypt attack: More than 230 killed in Sinai mosque - BBC News 🎈",
              "type": "group",
              "url": "http://www.bbc.com/news/world-middle-east-42110223",
              "user": Object {
                "__typename": "User",
                "_id": "BZuKgmPeYjBWWvaxk",
                "avatarUrl": "/avatar/admin?_dc=undefined",
                "displayName": "admin",
                "emailHash": "afcb7d3a42a9fdfe50bfa98f7daf6d93",
                "slug": "admin",
                "username": "admin",
              },
              "userId": "BZuKgmPeYjBWWvaxk",
              "viewCount": 4,
            },
          ]
        }
        disableVirtualization={false}
        getItem={[Function]}
        getItemCount={[Function]}
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        onContentSizeChange={[Function]}
        onEndReachedThreshold={2}
        onLayout={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
        updateCellsBatchingPeriod={50}
        viewabilityConfigCallbackPairs={Array []}
        windowSize={21}
      >
        <View>
          <View
            onLayout={[Function]}
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "white",
                    "borderColor": "#e1e8ee",
                    "borderWidth": 1,
                    "margin": 15,
                    "marginBottom": 0,
                    "padding": 15,
                    "shadowColor": "rgba(0,0,0, .2)",
                    "shadowOffset": Object {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 1,
                  },
                  undefined,
                  Object {
                    "borderBottomColor": "#FFF",
                    "borderBottomWidth": 1,
                    "borderRadius": 0,
                    "elevation": 0,
                    "margin": 0,
                    "shadowOffset": Object {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    undefined,
                    Object {
                      "flexDirection": "column",
                    },
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "marginBottom": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      style={
                        Array [
                          undefined,
                          Object {
                            "position": "relative",
                          },
                        ]
                      }
                    >
                      <View
                        accessible={true}
                        isTVSelectable={true}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "backgroundColor": "#58634f",
                            "borderRadius": 17.5,
                            "height": 35,
                            "opacity": 1,
                            "width": 35,
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "overflow": "hidden",
                              },
                              Object {
                                "borderRadius": 17.5,
                                "height": 35,
                                "width": 35,
                              },
                            ]
                          }
                        >
                          <FastImageView
                            onFastImageError={[Function]}
                            resizeMode="cover"
                            source={
                              Object {
                                "priority": "high",
                                "uri": "/avatar/admin?_dc=undefined",
                              }
                            }
                            style={
                              Object {
                                "bottom": 0,
                                "left": 0,
                                "position": "absolute",
                                "right": 0,
                                "top": 0,
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                    <View
                      style={
                        Object {
                          "flexDirection": "column",
                          "justifyContent": "center",
                        }
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        numberOfLines={1}
                        style={
                          Array [
                            undefined,
                            Object {
                              "flex": 1,
                              "marginRight": 15,
                              "paddingLeft": 5,
                            },
                          ]
                        }
                      >
                        admin
                      </Text>
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            undefined,
                            Object {
                              "paddingLeft": 5,
                            },
                          ]
                        }
                      >
                        25 Nov 17
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "flex-end",
                      }
                    }
                  >
                    <View
                      accessible={true}
                      isTVSelectable={true}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "opacity": 1,
                          "paddingRight": 30,
                        }
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={false}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "color": "#4C6070",
                              "fontSize": 16,
                            },
                            undefined,
                            Object {
                              "fontFamily": "anticon",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        
                      </Text>
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            undefined,
                          ]
                        }
                      >
                        2
                      </Text>
                    </View>
                    <View
                      accessible={true}
                      isTVSelectable={true}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "opacity": 1,
                        }
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={false}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "color": "#4C6070",
                              "fontSize": 14,
                            },
                            undefined,
                            Object {
                              "fontFamily": "anticon",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        
                      </Text>
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            undefined,
                          ]
                        }
                      >
                        3
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  accessible={true}
                  isTVSelectable={true}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "flexDirection": "column",
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "flex-start",
                        "flexDirection": "column",
                        "justifyContent": "flex-start",
                      }
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                    >
                      Egypt attack: More than 230 killed in Sinai mosque - BBC News 🎈
                    </Text>
                    <View>
                      <View
                        accessible={true}
                        isTVSelectable={true}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "marginRight": 5,
                            "marginTop": 5,
                            "opacity": 1,
                          }
                        }
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "color": "#2E88FF",
                            }
                          }
                        >
                          #news
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View>
                    <View
                      style={
                        Array [
                          Object {
                            "overflow": "hidden",
                          },
                          undefined,
                        ]
                      }
                    >
                      <FastImageView
                        resizeMode="contain"
                        source={
                          Object {
                            "priority": "high",
                            "uri": "https://ichef-1.bbci.co.uk/news/1024/cpsprodpb/B1ED/production/_98894554_mediaitem98894553.jpg",
                          }
                        }
                        style={
                          Object {
                            "bottom": 0,
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                          }
                        }
                      />
                    </View>
                  </View>
                  <View>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      numberOfLines={2}
                      style={
                        Array [
                          undefined,
                          null,
                        ]
                      }
                    >
                      The gun and bomb assault in Sinai is the deadliest militant attack in Egypt

                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    accessible={true}
                    isTVSelectable={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "opacity": 1,
                        "paddingRight": 20,
                      }
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={false}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#4C6070",
                            "fontSize": 16,
                          },
                          undefined,
                          Object {
                            "fontFamily": "anticon",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                    >
                      
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                    >
                      4
                    </Text>
                  </View>
                  <View
                    accessible={true}
                    isTVSelectable={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "opacity": 1,
                      }
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={false}
                      ellipsizeMode="tail"
                      style={
                        Array [
                          Object {
                            "color": "#4C6070",
                            "fontSize": 14,
                          },
                          undefined,
                          Object {
                            "fontFamily": "anticon",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                    >
                      
                    </Text>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                    >
                      1
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </RCTSafeAreaView>
</BVLinearGradient>
`;

exports[`render correctly with categories data 1`] = `
<BVLinearGradient
  colors={
    Array [
      4293914607,
      4293914607,
    ]
  }
  locations={
    Array [
      0,
      1,
    ]
  }
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Array [
            undefined,
            null,
          ]
        }
      >
        <View
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#2E88FF",
                    "fontSize": 36,
                  },
                  undefined,
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
              type="material-community"
            >
              
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              undefined,
              undefined,
              Object {
                "alignItems": "flex-start",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "fontFamily": "OpenSans-Regular",
                },
                Array [
                  undefined,
                  null,
                ],
              ]
            }
          >
            Categories
          </Text>
        </View>
        <View
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        />
      </View>
      <RCTScrollView
        contentContainerStyle={
          Array [
            undefined,
            Object {
              "paddingBottom": 15,
            },
          ]
        }
        data={
          Array [
            Object {
              "__typename": "Post",
              "_id": "ynCDtwqBhhqK2vveG",
              "baseScore": null,
              "categories": Array [
                Object {
                  "name": "news",
                },
              ],
              "clickCount": null,
              "color": "blue",
              "commentCount": null,
              "commenters": Array [
                Object {
                  "__typename": "User",
                  "_id": "Z2mNWQuJXFTJCnMyi",
                  "avatarUrl": "https://secure.gravatar.com/avatar/0db53901eca1472a8997a38a24b38d06?size=200&default=mm",
                  "displayName": "tester",
                  "emailHash": "0db53901eca1472a8997a38a24b38d06",
                  "slug": "tester",
                  "username": "tester",
                },
              ],
              "createdAt": "2017-11-24T19:21:42.183Z",
              "currentUserVotes": Array [
                Object {
                  "__typename": "Vote",
                  "_id": "9LDpdbmQpig9SN6X3",
                  "power": 1,
                  "voteType": "upvote",
                },
              ],
              "excerpt": "The gun and bomb assault in Sinai is the deadliest militant attack in Egypt
",
              "postedAt": "2017-11-24T19:21:42.183Z",
              "score": 0.499763,
              "slug": "egypt-attack-more-than-230-killed-in-sinai-mosque-bbc-news",
              "status": 2,
              "sticky": false,
              "thumbnailUrl": null,
              "title": "Egypt attack: More than 230 killed in Sinai mosque - BBC News 🎈",
              "type": "group",
              "url": "http://www.bbc.com/news/world-middle-east-42110223",
              "user": Object {
                "__typename": "User",
                "_id": "BZuKgmPeYjBWWvaxk",
                "avatarUrl": "/avatar/admin?_dc=undefined",
                "displayName": "admin",
                "emailHash": "afcb7d3a42a9fdfe50bfa98f7daf6d93",
                "name": "admin",
                "slug": "admin",
                "username": "admin",
              },
              "userId": "BZuKgmPeYjBWWvaxk",
              "viewCount": null,
            },
          ]
        }
        disableVirtualization={false}
        getItem={[Function]}
        getItemCount={[Function]}
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        onContentSizeChange={[Function]}
        onEndReachedThreshold={2}
        onLayout={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
        updateCellsBatchingPeriod={50}
        viewabilityConfigCallbackPairs={Array []}
        windowSize={21}
      >
        <View>
          <View
            onLayout={[Function]}
            style={null}
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "white",
                    "borderColor": "#e1e8ee",
                    "borderWidth": 1,
                    "margin": 15,
                    "marginBottom": 0,
                    "padding": 15,
                    "shadowColor": "rgba(0,0,0, .2)",
                    "shadowOffset": Object {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 1,
                  },
                  undefined,
                  Object {
                    "borderBottomColor": "#FFF",
                    "borderBottomWidth": 1,
                    "borderRadius": 0,
                    "elevation": 0,
                    "margin": 0,
                    "shadowOffset": Object {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    undefined,
                    Object {
                      "flexDirection": "column",
                    },
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                      "marginBottom": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "flex": 1,
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      style={
                        Array [
                          undefined,
                          Object {
                            "position": "relative",
                          },
                        ]
                      }
                    >
                      <View
                        accessible={true}
                        isTVSelectable={true}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "backgroundColor": "#58634f",
                            "borderRadius": 17.5,
                            "height": 35,
                            "opacity": 1,
                            "width": 35,
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "overflow": "hidden",
                              },
                              Object {
                                "borderRadius": 17.5,
                                "height": 35,
                                "width": 35,
                              },
                            ]
                          }
                        >
                          <FastImageView
                            onFastImageError={[Function]}
                            resizeMode="cover"
                            source={
                              Object {
                                "priority": "high",
                                "uri": "/avatar/admin?_dc=undefined",
                              }
                            }
                            style={
                              Object {
                                "bottom": 0,
                                "left": 0,
                                "position": "absolute",
                                "right": 0,
                                "top": 0,
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                    <View
                      style={
                        Object {
                          "flexDirection": "column",
                          "justifyContent": "center",
                        }
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        numberOfLines={1}
                        style={
                          Array [
                            undefined,
                            Object {
                              "flex": 1,
                              "marginRight": 15,
                              "paddingLeft": 5,
                            },
                          ]
                        }
                      >
                        admin
                      </Text>
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            undefined,
                            Object {
                              "paddingLeft": 5,
                            },
                          ]
                        }
                      >
                        25 Nov 17
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "flex-end",
                      }
                    }
                  >
                    <View
                      accessible={true}
                      isTVSelectable={true}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "opacity": 1,
                          "paddingRight": 30,
                        }
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={false}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "color": "#4C6070",
                              "fontSize": 16,
                            },
                            undefined,
                            Object {
                              "fontFamily": "anticon",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        
                      </Text>
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            undefined,
                          ]
                        }
                      >
                        0
                      </Text>
                    </View>
                    <View
                      accessible={true}
                      isTVSelectable={true}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "justifyContent": "center",
                          "opacity": 1,
                        }
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={false}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "color": "#4C6070",
                              "fontSize": 14,
                            },
                            undefined,
                            Object {
                              "fontFamily": "anticon",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        
                      </Text>
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            undefined,
                          ]
                        }
                      >
                        0
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  accessible={true}
                  isTVSelectable={true}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "flexDirection": "column",
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "alignItems": "flex-start",
                        "flexDirection": "column",
                        "justifyContent": "flex-start",
                      }
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                    >
                      Egypt attack: More than 230 killed in Sinai mosque - BBC News 🎈
                    </Text>
                    <View>
                      <View
                        accessible={true}
                        isTVSelectable={true}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "marginRight": 5,
                            "marginTop": 5,
                            "opacity": 1,
                          }
                        }
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "color": "#2E88FF",
                            }
                          }
                        >
                          #news
                        </Text>
                      </View>
                    </View>
                  </View>
                  <View>
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      numberOfLines={2}
                      style={
                        Array [
                          undefined,
                          undefined,
                        ]
                      }
                    >
                      The gun and bomb assault in Sinai is the deadliest militant attack in Egypt

                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </RCTSafeAreaView>
</BVLinearGradient>
`;

exports[`render correctly with false props 1`] = `
<BVLinearGradient
  colors={
    Array [
      4293914607,
      4293914607,
    ]
  }
  locations={
    Array [
      0,
      1,
    ]
  }
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Array [
            undefined,
            null,
          ]
        }
      >
        <View
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#2E88FF",
                    "fontSize": 36,
                  },
                  undefined,
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
              type="material-community"
            >
              
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              undefined,
              undefined,
              Object {
                "alignItems": "flex-start",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "fontFamily": "OpenSans-Regular",
                },
                Array [
                  undefined,
                  null,
                ],
              ]
            }
          >
            Categories
          </Text>
        </View>
        <View
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        />
      </View>
      <RCTScrollView
        contentContainerStyle={
          Array [
            undefined,
            Object {
              "paddingBottom": 15,
            },
          ]
        }
        data={
          Array [
            Object {
              "__typename": "Post",
              "_id": "ynCDtwqBhhqK2vveG",
              "baseScore": null,
              "categories": Array [
                Object {
                  "name": "news",
                },
              ],
              "clickCount": null,
              "color": "blue",
              "commentCount": null,
              "commenters": Array [
                Object {
                  "__typename": "User",
                  "_id": "Z2mNWQuJXFTJCnMyi",
                  "avatarUrl": "https://secure.gravatar.com/avatar/0db53901eca1472a8997a38a24b38d06?size=200&default=mm",
                  "displayName": "tester",
                  "emailHash": "0db53901eca1472a8997a38a24b38d06",
                  "slug": "tester",
                  "username": "tester",
                },
              ],
              "createdAt": "2017-11-24T19:21:42.183Z",
              "currentUserVotes": Array [
                Object {
                  "__typename": "Vote",
                  "_id": "9LDpdbmQpig9SN6X3",
                  "power": 1,
                  "voteType": "upvote",
                },
              ],
              "excerpt": "The gun and bomb assault in Sinai is the deadliest militant attack in Egypt
",
              "postedAt": "2017-11-24T19:21:42.183Z",
              "score": 0.499763,
              "slug": "egypt-attack-more-than-230-killed-in-sinai-mosque-bbc-news",
              "status": 2,
              "sticky": false,
              "thumbnailUrl": null,
              "title": "Egypt attack: More than 230 killed in Sinai mosque - BBC News 🎈",
              "type": "group",
              "url": "http://www.bbc.com/news/world-middle-east-42110223",
              "user": Object {
                "__typename": "User",
                "_id": "BZuKgmPeYjBWWvaxk",
                "avatarUrl": "/avatar/null?_dc=undefined",
                "displayName": null,
                "emailHash": "afcb7d3a42a9fdfe50bfa98f7daf6d93",
                "name": null,
                "slug": "admin",
                "username": null,
              },
              "userId": "BZuKgmPeYjBWWvaxk",
              "viewCount": null,
            },
          ]
        }
        disableVirtualization={false}
        getItem={[Function]}
        getItemCount={[Function]}
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        onContentSizeChange={[Function]}
        onEndReachedThreshold={2}
        onLayout={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
        updateCellsBatchingPeriod={50}
        viewabilityConfigCallbackPairs={Array []}
        windowSize={21}
      >
        <View>
          <View
            onLayout={[Function]}
            style={null}
          />
        </View>
      </RCTScrollView>
    </View>
  </RCTSafeAreaView>
</BVLinearGradient>
`;

exports[`render correctly with false props2 1`] = `
<BVLinearGradient
  colors={
    Array [
      4293914607,
      4293914607,
    ]
  }
  locations={
    Array [
      0,
      1,
    ]
  }
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Array [
            undefined,
            null,
          ]
        }
      >
        <View
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#2E88FF",
                    "fontSize": 36,
                  },
                  undefined,
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
              type="material-community"
            >
              
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              undefined,
              undefined,
              Object {
                "alignItems": "flex-start",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={1}
            style={
              Array [
                Object {
                  "fontFamily": "OpenSans-Regular",
                },
                Array [
                  undefined,
                  null,
                ],
              ]
            }
          >
            Categories
          </Text>
        </View>
        <View
          style={
            Array [
              undefined,
              undefined,
            ]
          }
        />
      </View>
      <RCTScrollView
        contentContainerStyle={
          Array [
            undefined,
            Object {
              "paddingBottom": 15,
            },
          ]
        }
        data={
          Array [
            Object {
              "__typename": "Post",
              "_id": "ynCDtwqBhhqK2vveG",
              "baseScore": null,
              "categories": Array [
                Object {
                  "test": "news",
                },
              ],
              "clickCount": null,
              "color": "blue",
              "commentCount": null,
              "commenters": Array [
                Object {
                  "__typename": "User",
                  "_id": "Z2mNWQuJXFTJCnMyi",
                  "avatarUrl": "https://secure.gravatar.com/avatar/0db53901eca1472a8997a38a24b38d06?size=200&default=mm",
                  "displayName": "tester",
                  "emailHash": "0db53901eca1472a8997a38a24b38d06",
                  "slug": "tester",
                  "username": "tester",
                },
              ],
              "createdAt": "2017-11-24T19:21:42.183Z",
              "currentUserVotes": Array [
                Object {
                  "__typename": "Vote",
                  "_id": "9LDpdbmQpig9SN6X3",
                  "power": 1,
                  "voteType": "upvote",
                },
              ],
              "excerpt": "The gun and bomb assault in Sinai is the deadliest militant attack in Egypt
",
              "postedAt": "2017-11-24T19:21:42.183Z",
              "score": 0.499763,
              "slug": "egypt-attack-more-than-230-killed-in-sinai-mosque-bbc-news",
              "status": 2,
              "sticky": false,
              "thumbnailUrl": null,
              "title": "Egypt attack: More than 230 killed in Sinai mosque - BBC News 🎈",
              "type": "group",
              "url": "http://www.bbc.com/news/world-middle-east-42110223",
              "user": Object {
                "__typename": "User",
                "_id": "BZuKgmPeYjBWWvaxk",
                "avatarUrl": "/avatar/null?_dc=undefined",
                "displayName": undefined,
                "emailHash": "afcb7d3a42a9fdfe50bfa98f7daf6d93",
                "name": null,
                "slug": "admin",
                "username": null,
              },
              "userId": "BZuKgmPeYjBWWvaxk",
              "viewCount": null,
            },
          ]
        }
        disableVirtualization={false}
        getItem={[Function]}
        getItemCount={[Function]}
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        onContentSizeChange={[Function]}
        onEndReachedThreshold={2}
        onLayout={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
        updateCellsBatchingPeriod={50}
        viewabilityConfigCallbackPairs={Array []}
        windowSize={21}
      >
        <View>
          <View
            onLayout={[Function]}
            style={null}
          />
        </View>
      </RCTScrollView>
    </View>
  </RCTSafeAreaView>
</BVLinearGradient>
`;
